--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": "http://tush27.github.io/codingProfiles",
   "dependencies": {
-    "@apollo/client": "^3.7.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
